fix table head alignment issue

--- a/jsapp/scss/components/_kobo.table.scss
+++ b/jsapp/scss/components/_kobo.table.scss
@@ -38,8 +38,9 @@
       font-size: 13px;
     }
 
-    .rt-tbody {
+    .rt-tbody, .rt-thead {
       overflow-x: hidden;
+      overflow-y: scroll;
       direction: rtl;
 
       > div {
